--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Sneaks App</title>
+  <title>Sneaks App - Search Sneakers and Compare Prices</title>
+  <meta name='description' content='Search sneakers, and find and compare the best sneaker prices from StockX, Goat, Flight Club and Stadium Goods.'></meta>
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // https://github.com/rafrex/spa-github-pages
