--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <!--- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Search sneakers, and compare the best sneaker prices from StockX, Goat, Flight Club and Stadium Goods" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
